tests/cases/fail/match_expression_requires_wildcard.p4
enum TokenKind:
    INT
    IDENT

def main() -> None:
    kind = TokenKind.INT
    label = match kind:
        case TokenKind.INT: "int"
        case TokenKind.IDENT: "ident"

    print(label)
